tests/fixtures/invalid/int_mul_none.py
# Cannot multiply Int and None
x: int = 1 * None
